--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "format": "prettier --write --ignore-path .gitignore 'src/**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "babel-plugin-styled-components": "^2.0.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
