--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microcms-blog",
+  "name": "raisa-portrait",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,26 +10,26 @@
     "format": "prettier --write --ignore-path .gitignore 'src/**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "babel-plugin-styled-components": "^2.0.3",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "caniuse-lite": "^1.0.30001375",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
-    "@types/styled-components": "^5.1.23",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "microcms-js-sdk": "^2.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "4.5.5"
+    "@types/node": "18.7.2",
+    "@types/react": "18.0.17",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.5",
+    "microcms-js-sdk": "^2.2.1",
+    "prettier": "^2.7.1",
+    "sass": "^1.54.4",
+    "typescript": "4.7.4"
   }
 }
