--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write --ignore-path .gitignore 'src/**/*.{js,jsx,ts,tsx,json,css}'"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
