--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "babel-plugin-styled-components": "^2.0.7",
-    "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "caniuse-lite": "^1.0.30001375",
     "next": "12.2.5",
@@ -27,11 +26,14 @@
     "@types/node": "18.7.2",
     "@types/react": "18.0.17",
     "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
     "microcms-js-sdk": "^2.2.1",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "sass": "^1.54.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
